fixed footer not staying at the bottom on mobile/tablet too

--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -11,5 +11,6 @@
 
     @include mobile {
         margin-inline: 20px;
+        min-height: 83.35vh;
     }
 }
